fix(content-block-segmented): align react and wc versions

--- a/packages/styles/scss/components/content-block-segmented/_content-block-segmented.scss
+++ b/packages/styles/scss/components/content-block-segmented/_content-block-segmented.scss
@@ -17,6 +17,10 @@
         }
       }
     }
+
+    .#{$prefix}--content-block__cta-row {
+      margin-bottom: $spacing-07;
+    }
   }
 
   :host(#{$dds-prefix}-content-block-segmented)
